--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,5 @@ serde = { version = "1.0.130", features = ["default", "derive", "rc"] }
 
 tracing = "0.1"
 tracing-subscriber = "0.3"
+
+thiserror = "1.0.30"
